kubernetes/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-mysql
spec:
  selector:
    app: webook-mysql
  ports:
    - protocol: TCP
      nodePort: 30306
      port: 3306
      targetPort: 3306
  type: NodePort
