kubernetes/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      # 三个port
      # port : service 本身的端口 (k8s 内部网络使用端口)
      # nodePort : 外部访问端口，30000-32767之间 (k8s外部网络使用端口)
      # targetPort : pod 上暴露的端口
      port: 16379
      nodePort: 31379
      targetPort: 6379
  type: NodePort
