kubernetes/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        # 定义了请求路径，满足条件时将流量转发到后面的webook service上，端口是81
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # 与k8s-webook-service.yaml 中的name对应
                name: webook
                port:
                  # 与k8s-webook-service.yaml 中的port对应
                  number: 81
      # 定义了host
      host: practice.webook.com
